re fixed mobile bug not showing menu

--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -21,6 +21,6 @@
 
 @media (max-width: 1024px) {
     .navbar {
-        padding: 1rem 2rem;
+        padding: 1rem 1rem;
     }
 }
